testsuite/escript/errors/errors011-multi-line-string.err2
errors011-multi-line-string.src:1:10: error: String literal contains a newline.
